Set perm size so tests run